refact: update with release branch (#2091)
* fix: add style file back for building

* fix: script no permission

* chore: add NOTICE and LICENSE to binary package and add DISCLAIMER file

Co-authored-by: Simon Cheung <ming@apache.org>
Co-authored-by: vaughn <vaughn@apache.org>
Co-authored-by: 青年 <1043706593@qq.com>